<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pathfinder</name>
  <version>0.0.0</version>
  <description>Pathfinder: Robot SLAM and Autonomous Navigation</description>
  <maintainer email="chandana@todo.todo">chandana</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Dependencies for teleop_keyboard.py -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  
  <!-- Dependencies for your launch file and simulation -->
  <depend>rclcpp</depend>
  <depend>nav2_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
